fixed spacing for production

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,7 +3,7 @@
   height: 100vh;
 
   &gl-ctrl-top-right {
-    top: 0.7rem !important;
+    top: 1rem !important;
     width: 90%;
     left: 50%;
     transform: translateX(-50%);
